css: fix a bug with the /book-reviews/ page on mobile

--- a/css/components/list_of_posts.css
+++ b/css/components/list_of_posts.css
@@ -29,7 +29,7 @@ section {
  */
 #list_of_posts section.plinks {
   padding:     1.5em var(--default-padding);
-  width:       calc(100vw);
+  width:       calc(100vw - 2*var(--default-padding));
   margin-left: calc(50% - 50vw);
   
   & > * {
